crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_shape_to_path__convert_shape_to_path-7.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_shape_to_path.rs
expression: "test_config(r#\"{ \"convertShapeToPath\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <style>\n        g > rect { fill: red }\n    </style>\n    <g><rect width=\"10\" height=\"10\"/></g>\n    <rect x=\"5\" y=\"5\" width=\"10\" height=\"10\"/>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <style>
        g>rect{fill:red}
    </style>
    <g>
        <rect width="10" height="10"/>
    </g>
    <path d="M5 5H15V15H5Z"/>
</svg>
